package ru.skfu.softwarestore.entity;
import jakarta.persistence.*; import lombok.*; import java.time.LocalDateTime; import java.util.UUID;
@Entity @Table(name="licenses") @Getter @Setter @NoArgsConstructor @AllArgsConstructor @Builder
public class License { @Id @GeneratedValue(strategy=GenerationType.UUID) private UUID id; @ManyToOne(fetch=FetchType.LAZY,optional=false) @JoinColumn(name="user_id",nullable=false) private User user; @ManyToOne(fetch=FetchType.LAZY,optional=false) @JoinColumn(name="product_id",nullable=false) private SoftwareProduct product; @ManyToOne(fetch=FetchType.LAZY,optional=false) @JoinColumn(name="order_id",nullable=false) private Order order; @Column(name="license_key",nullable=false,unique=true,length=64) private String licenseKey; @Enumerated(EnumType.STRING) @Builder.Default @Column(nullable=false,length=20) private LicenseStatus status=LicenseStatus.ACTIVE; @Builder.Default @Column(name="issued_at",nullable=false,updatable=false) private LocalDateTime issuedAt=LocalDateTime.now(); @Column(name="activated_at") private LocalDateTime activatedAt; }
