package ru.skfu.softwarestore.presentation.controller.v1;
import lombok.RequiredArgsConstructor; import org.springframework.http.*; import org.springframework.security.core.Authentication; import org.springframework.web.bind.annotation.*; import ru.skfu.softwarestore.control.IOrderService; import ru.skfu.softwarestore.dto.OrderResponse; import java.util.*;
@RestController @RequestMapping("/api/v1/orders") @RequiredArgsConstructor public class OrderV1Controller { private final IOrderService orders; @PostMapping public ResponseEntity<OrderResponse> create(Authentication a){return ResponseEntity.status(HttpStatus.CREATED).body(orders.createFromCart(a.getName()));} @GetMapping public List<OrderResponse> all(Authentication a){return orders.history(a.getName());} @GetMapping("/{id}") public OrderResponse get(Authentication a,@PathVariable UUID id){return orders.getOwn(a.getName(),id);}@PostMapping("/{id}/pay") public OrderResponse pay(Authentication a,@PathVariable UUID id){return orders.pay(a.getName(),id);} }
